fit-content sound on/off, fix z-index for planets iframe

--- a/style.scss
+++ b/style.scss
@@ -154,7 +154,7 @@ a
     {
       .menuDisappear
       {
-        display: none;
+        opacity: 0;
       }
     }
 #mercuryimage
